# vibra

./: .gitignore  AGENTS.md  Cargo.toml  DRAFT.md  PHILOSOPHY.md  README.md
docs/: project-layout.md
docs/superpowers/plans/: 2026-05-05-type-system-adt-foundation.md
examples/: ask-name.vibra  fs-roundtrip.vibra  hello.vibra
schemas/: diagnostic.schema.json  expression.schema.json  function.schema.json  linter-codes.json  module-surface.schema.json  project-manifest.schema.json  query-response.schema.json  type-expr.schema.json
scripts/: migrate_fs_labeled.mjs  migrate_fs_labeled.py  migrate_integration_labeled.mjs
src/: code_doc.rs  emit.rs  execute.rs  lib.rs  load.rs  lower.rs  main.rs  project.rs  run_wasmer.rs  test_runner.rs  tooling.rs  wasm_abi.rs  yaml_subset.rs
src/runtime/: fs.rs  io.rs  mod.rs  wasi_env.rs
tests/: README.md  integration.rs  lang-control-flow.vibra  lang-enums.vibra  lang-functions.vibra  lang-generics.vibra  lang-many-tests.vibra  lang-match.vibra  lang-mutation.vibra  lang-newtype.vibra  lang-values.vibra  stdlib-code.vibra  stdlib-io.vibra  stdlib-option.vibra  stdlib-result.vibra
tmp/: hello.txt
