[package]
name = "vibra"
version = "0.1.0"
edition = "2021"
description = "Vibe-coding-first language: YAML surface, static types, compiles to WebAssembly"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nahharris/vibra"
keywords = ["compiler", "wasm", "yaml", "functional"]
categories = ["compilers", "development-tools"]

[[bin]]
name = "vibra"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
wasm-encoder = "0.240"
wasmer = "4.4"

[dev-dependencies]
tempfile = "3.14"
