[package]
name = "vibra"
version = "0.1.0"
edition = "2021"
description = "Vibe-coding-first language: YAML surface, static types, compiles to WebAssembly"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nahharris/vibra"
keywords = ["compiler", "wasm", "yaml", "functional"]
categories = ["compilers", "development-tools"]

[[bin]]
name = "vibra"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
git2 = "0.20"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
wasm-encoder = "0.240"
wasmer = "4.4"
wasmer-wasix = { version = "0.28.0", default-features = false, features = ["sys-default"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
yaml-edit = "0.2.1"

[dev-dependencies]
tempfile = "3.14"
